--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <link rel="icon" href="images/icon_f145073d7ab4a294ccd064b0ce25de5b.ico" type="image/x-icon">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+    </style>
 </head>
 
 <body>
@@ -20,7 +23,7 @@
         <div class="container">
             <div class="row align-items-start">
                 <div class="col-12 col-sm-6">
-                    <h1>Nós somos especialistas em limpeza.</h1>
+                    <h1>Empresa especializada em limpeza profissional!</h1>
                     <p>Cuidamos da limpeza da sua casa, empresa ou escritório para você não precisar se preocupar.</p>
                 </div>
                 <div class="col-12 col-sm-6">
@@ -33,55 +36,49 @@
         <div class="container servicos">
             <div class="row servicos">
                 <div class="col-12 col-sm-6">
-                    <center><div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <center>
+                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="images/foto2.jpg" class="d-block w-100">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="images/slide1.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/slide2.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/slide3.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/slide4.jpeg" class="d-block w-100">
+                                </div>
+
                             </div>
-                            <div class="carousel-item">
-                                <img src="images/foto5.jpg" class="d-block w-100">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/foto7.jpg" class="d-block w-100">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/foto8.jpg" class="d-block w-100">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/foto11.jpg" class="d-block w-100">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/foto12.jpg" class="d-block w-100">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/foto13.jpg" class="d-block w-100">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/foto15.jpg" class="d-block w-100">
-                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </a>
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </a>
-                    </div></center>
+                    </center>
                 </div>
                 <div class="col-12 col-sm-6">
-                   <center> <h1>Nossos serviços:</h1>
+                    <h1>Nossos serviços</h1>
+                    <ul>
+                        <li>Limpeza pós obra</li>
+                        <li>Limpeza pré e pós mudança</li>
+                        <li>Limpeza de vidros e fachadas</li>
 
-                    <p>Limpeza de vidros e fachadas</p>
-                    <p>Limpeza pós obra</p>
-                    <p>Limpeza e tratamento de pisos</p>
-                    <p>Impermeabilização de estofados</p>
-                    <p>Limpeza pré e pós mudança</p>
-                    <p>Limpeza e sanitização de ambientes em residencias, escritórios, empresas e muito mais.</p></center>
+                        <li>Limpeza e tratamento de pisos</li>
+                        <li>Impermeabilização de estofados</li>
+
+                        <li>Limpeza e sanitização de ambientes em residencias, escritórios, empresas e muito mais.</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -94,17 +91,119 @@
                     <p>Faça um orçamento e tire suas Dúvidas com a gente.</p>
                 </div>
                 <div class="col-12 col-sm-6">
-                    <a href="https://api.whatsapp.com/send?phone=5531987490822" target="_blank"><h4><i class="fab fa-whatsapp"></i> 31 98749-0822 - Lucas</h4></a>
-                    <a href="https://api.whatsapp.com/send?phone=55319986921714" target="_blank"><h4><i class="fab fa-whatsapp"></i> 31 98692-1714 - Lucimar</h4></a>
+                    <a href="https://api.whatsapp.com/send?phone=5531987490822" target="_blank">
+                        <h4><i class="fab fa-whatsapp"></i> 31 98749-0822 - Lucas</h4>
+                    </a>
+                    <a href="https://api.whatsapp.com/send?phone=55319986921714" target="_blank">
+                        <h4><i class="fab fa-whatsapp"></i> 31 98692-1714 - Lucimar</h4>
+                    </a>
                     <h4><i class="fas fa-phone-alt"></i> 31 4146-0010</h4>
-                   <h4><i class="far fa-envelope"></i> renovalimp10@yahoo.com</h4>
+                    <a href="http://www.instagram.com/renovalimp1" target="_blank">
+                        <h4> <i class="fab fa-instagram"></i></i> renovalimp1</h4>
+                    </a>
+                    <h4><i class="far fa-envelope"></i> renovalimp10@yahoo.com</h4>
+
                     <h4><i class="fas fa-map-marker-alt"></i> Itabira-MG</h4>
+
                 </div>
             </div>
         </div>
     </div>
+    <div id="clientes" class="container">
+        <div class="row">
+            <div class="col-12 col-sm-6">
+                <h1>Alguns de nossos clientes</h1>
+                <ul>
+                    <li>Laboratório Duarte</li>
+                    <li>Loja Carolina Modas</li>
+                    <li>Loja Espaço da Moda </li>
+                    <li>IT Hotel Itabira</li>
+                </ul>
+
+            </div>
+            <div class="col-12 col-sm-6">
+                <center>
+                    <div id="carouselIndicators" class="carousel slide" data-bs-ride="carousel">
+
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="images/clientes1.jpeg" class="d-block w-100">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/clientes2.jpeg" class="d-block w-100">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/clientes3.jpeg" class="d-block w-100">
+                            </div>
+
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselIndicators" role="button" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </a>
+                    </div>
+                </center>
+            </div>
+
+
+        </div>
+
+    </div>
+    <div id="videos">
+        <div class="container">
+            <center>
+                <h1>Vídeos</h1>
+            </center>
+            <div class="row">
+                <div class="col-12 col-sm-4">
+                    <iframe width="100%" height="200px" src="https://www.youtube.com/embed/LscdQV5v4aQ" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+                <div class="col-12 col-sm-4">
+                    <iframe width="100%" height="200px" src="https://www.youtube.com/embed/JCWRgsu4H4k" frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+                <div class="col-12 col-sm-4">
+                    <iframe width="100%" height="200px" src="https://www.youtube.com/embed/rzH1dCRY0VM" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+                <div class="col-12 col-sm-4">
+                    <iframe width="100%" height="200px" src="https://www.youtube.com/embed/bEvSs_p1Ab0" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+                <div class="col-12 col-sm-4">
+                    <iframe width="100%" height="200px" src="https://www.youtube.com/embed/URSPVxxCCqY" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+                <div class="col-12 col-sm-4">
+                    <iframe width="100%" height="200px" src="https://www.youtube.com/embed/VZ7R9wwhcRY" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <div clas="container" id="ferramentas">
-        <center><h1>Equipamentos de ponta para o melhor resultado</h1></center>
+        <center>
+            <h1>Equipamentos profissionais e específicos para o melhor resultado</h1>
+        </center>
         <div class="row">
             <div class="col-12 col-sm-4">
                 <img src="images/foto3.jpg">
