Cor do botao e ajuste no tamanho

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <nav class="navbar navbar-expand-lg static-top">
             <div class="container">
                 <div class="row" style="width: 100%;">
-                    <div class="col-9">
+                    <div class="col-8">
                         <a class="navbar-brand" href="#">
                             <img src="images/logo.png" alt="">
                         </a>
                     </div>
-                    <div class="col-3">
+                    <div class="col-4">
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -39,7 +39,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a target="_blank" class="nav-link" href="https://api.whatsapp.com/send?phone=5531987490822"><button
-                                            type="button" class="btn btn-success">Whatsapp</button></a>
+                                            type="button" style="background-color: #34af23;" class="btn btn-success"><i class="fab fa-whatsapp"></i> Fale Conosco</button></a>
                                 </li>
                             </ul>
                         </div>
