--- a/index.html
+++ b/index.html
@@ -16,8 +16,38 @@
 </head>
 
 <body>
-    <div class="container divisao" id="titulo">
-        <center><img src="images/logo.png"></center>
+    <div class="container" id="titulo">
+        <nav class="navbar navbar-expand-lg static-top">
+            <div class="container">
+                <div class="row" style="width: 100%;">
+                    <div class="col-9">
+                        <a class="navbar-brand" href="#">
+                            <img src="images/logo.png" alt="">
+                        </a>
+                    </div>
+                    <div class="col-3">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarResponsive">
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#clientes"><button type="button" class="btn btn-light"
+                                            style="background-color: white;">Clientes</button></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a target="_blank" class="nav-link" href="https://api.whatsapp.com/send?phone=5531987490822"><button
+                                            type="button" class="btn btn-success">Whatsapp</button></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
     </div>
     <div class="divisao" id="especialista">
         <div class="container">
@@ -166,7 +196,7 @@
                 </div>
 
                 <div class="col-12 col-sm-4">
-                    <iframe width="100%" height="200px" src="https://www.youtube.com/embed/JCWRgsu4H4k" frameborder="0" 
+                    <iframe width="100%" height="200px" src="https://www.youtube.com/embed/JCWRgsu4H4k" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -216,8 +246,14 @@
             </div>
         </div>
     </div>
-    <div id="creditos">
-        <p>Desenvolvido por <a href="https://www.instagram.com/inovaprog" target="_blank">InovaProg</a></p>
+    <div id="creditos" class="row">
+        <div class="col-12 col-sm-9">
+
+        </div>
+        <div class="col-12 col-sm-3">
+            Desenvolvido por <a href="https://www.instagram.com/inovaprog" target="_blank">InovaProg</a>
+        </div>
+        
     </div>
 
 
