--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/c16c56a8f1.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet">
+    <link href="style.css?123" rel="stylesheet">
     <link rel="icon" href="images/icon_f145073d7ab4a294ccd064b0ce25de5b.ico" type="image/x-icon">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
@@ -18,33 +18,27 @@
 <body>
     <div class="container" id="titulo">
         <nav class="navbar navbar-expand-lg static-top">
-            <div class="container">
-                <div class="row" style="width: 100%;">
-                    <div class="col-8">
-                        <a class="navbar-brand" href="#">
-                            <img src="images/logo.png" alt="">
-                        </a>
-                    </div>
-                    <div class="col-4">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarResponsive">
-                            <ul class="navbar-nav ml-auto">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#clientes"><button type="button" class="btn btn-light"
-                                            style="background-color: white;">Clientes</button></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a target="_blank" class="nav-link" href="https://api.whatsapp.com/send?phone=5531987490822"><button
-                                            type="button" style="background-color: #34af23;" class="btn btn-success"><i class="fab fa-whatsapp"></i> Fale Conosco</button></a>
-                                </li>
-                            </ul>
+            <div class="container" style="background-color: white;">
+                <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white; width: 100%;">
+                    <div class="container-fluid" style="background-color: white;">
+                        <a class="navbar-brand" href="#"><img src="images/logo.png"></a>
+                        <div>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                                <div class="navbar-nav ">
+
+                                    <a class="nav-link" href="#clientes"><button type="button" class="btn btn-light">Clientes</button></a>
+                                    <a class="nav-link" href="https://api.whatsapp.com/send?phone=5531987490822"><button type="button" class="btn btn-success "><i class="fab fa-whatsapp"></i> Fale Conosco</button></a>
+                                    
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </nav>
             </div>
         </nav>
 
@@ -106,7 +100,7 @@
 
                         <li>Limpeza e tratamento de pisos</li>
                         <li>Impermeabilização de estofados</li>
-
+                        <li>Limpeza e higienização de estofados, colchões, cadeiras, poltronas, tapetes e etc...</li>
                         <li>Limpeza e sanitização de ambientes em residencias, escritórios, empresas e muito mais.</li>
                     </ul>
                 </div>
@@ -253,7 +247,7 @@
         <div class="col-12 col-sm-3">
             Desenvolvido por <a href="https://www.instagram.com/inovaprog" target="_blank">InovaProg</a>
         </div>
-        
+
     </div>
 
 
