--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 </head>
 
 <body>
+    <div class="container" id="titulo-mb">
+        <div class="row">
+            <div class="col-12">
+                <img src="images/logo.png" style="width: 100%;">
+            </div>
+            <center>
+                <a class="nav-link" href="#clientes"><button type="button" class="btn btn-light">Clientes</button></a>
+                <a class="nav-link" target="_blank" href="https://api.whatsapp.com/send?phone=5531987490822"><button type="button"
+                        class="btn btn-success "><i class="fab fa-whatsapp"></i> Fale Conosco</button></a>
+            </center>
+        </div>
+    </div>
     <div class="container" id="titulo">
         <nav class="navbar navbar-expand-lg static-top">
             <div class="container" style="background-color: white;">
@@ -31,9 +43,12 @@
                             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                                 <div class="navbar-nav ">
 
-                                    <a class="nav-link" href="#clientes"><button type="button" class="btn btn-light">Clientes</button></a>
-                                    <a class="nav-link" href="https://api.whatsapp.com/send?phone=5531987490822"><button type="button" class="btn btn-success "><i class="fab fa-whatsapp"></i> Fale Conosco</button></a>
-                                    
+                                    <a class="nav-link" href="#clientes"><button type="button"
+                                            class="btn btn-light">Clientes</button></a>
+                                    <a class="nav-link" target="_blank" href="https://api.whatsapp.com/send?phone=5531987490822"><button
+                                            type="button" class="btn btn-success "><i class="fab fa-whatsapp"></i> Fale
+                                            Conosco</button></a>
+
                                 </div>
                             </div>
                         </div>
