--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
     </style>
+    <!-- Facebook Pixel Code -->
+    <script>
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+            n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '557452671864238');
+        fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+            src="https://www.facebook.com/tr?id=557452671864238&ev=PageView&noscript=1" /></noscript>
+    <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
@@ -23,8 +42,8 @@
             </div>
             <center>
                 <a class="nav-link" href="#clientes"><button type="button" class="btn btn-light">Clientes</button></a>
-                <a class="nav-link" target="_blank" href="https://api.whatsapp.com/send?phone=5531987490822"><button type="button"
-                        class="btn btn-success "><i class="fab fa-whatsapp"></i> Fale Conosco</button></a>
+                <a class="nav-link" target="_blank" href="https://api.whatsapp.com/send?phone=5531987490822"><button
+                        type="button" class="btn btn-success "><i class="fab fa-whatsapp"></i> Fale Conosco</button></a>
             </center>
         </div>
     </div>
@@ -45,8 +64,9 @@
 
                                     <a class="nav-link" href="#clientes"><button type="button"
                                             class="btn btn-light">Clientes</button></a>
-                                    <a class="nav-link" target="_blank" href="https://api.whatsapp.com/send?phone=5531987490822"><button
-                                            type="button" class="btn btn-success "><i class="fab fa-whatsapp"></i> Fale
+                                    <a class="nav-link" target="_blank"
+                                        href="https://api.whatsapp.com/send?phone=5531987490822"><button type="button"
+                                            class="btn btn-success "><i class="fab fa-whatsapp"></i> Fale
                                             Conosco</button></a>
 
                                 </div>
