--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
 
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
+                                    <img src="images/slide5.png" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
                                     <img src="images/slide1.jpeg" class="d-block w-100">
                                 </div>
                                 <div class="carousel-item">
@@ -250,6 +253,18 @@
 
                 <div class="col-12 col-sm-4">
                     <iframe width="100%" height="200px" src="https://www.youtube.com/embed/VZ7R9wwhcRY" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+                <div class="col-12 col-sm-4">
+                    <iframe width="100%" height="200px" src="https://www.youtube.com/embed/0VmToFCfTZU" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+                <div class="col-12 col-sm-4">
+                    <iframe width="100%" height="200px" src="https://www.youtube.com/embed/VCHt-56Uxu8" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
