--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -32,13 +32,30 @@
     <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=557452671864238&ev=PageView&noscript=1" /></noscript>
     <!-- End Facebook Pixel Code -->
+
+    <!-- BOTAO WHATSAPP-->
+    <style>
+        .whatsapp {
+            position: fixed;
+            top: 82%;
+            right: 1%;
+            padding: 10px;
+            z-index: 10000000;
+        }
+    </style>
+    <div>
+        <a href="https://api.whatsapp.com/send?l=pt&phone=+553141460010" target="_blank">
+            <img class="whatsapp" src="images/whatsapp.png" />
+        </a>
+    </div>
+    <!-- END WHATSAPP-->
 </head>
 
 <body>
     <div class="container" id="titulo-mb">
         <div class="row">
             <div class="col-12">
-                <img src="images/logo.png" style="width: 100%;">
+                <img src="images/Logo Atualizada Em PDF1.png" style="width: 100%;">
             </div>
             <center>
                 <a class="nav-link" href="#clientes"><button type="button" class="btn btn-light">Clientes</button></a>
@@ -52,7 +69,7 @@
             <div class="container" style="background-color: white;">
                 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white; width: 100%;">
                     <div class="container-fluid" style="background-color: white;">
-                        <a class="navbar-brand" href="#"><img src="images/logo.png"></a>
+                        <a class="navbar-brand" href="#"><img src="images/Logo Atualizada Em PDF1.png"></a>
                         <div>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
@@ -65,7 +82,7 @@
                                     <a class="nav-link" href="#clientes"><button type="button"
                                             class="btn btn-light">Clientes</button></a>
                                     <a class="nav-link" target="_blank"
-                                        href="https://api.whatsapp.com/send?phone=5531987490822"><button type="button"
+                                        href="https://api.whatsapp.com/send?phone=553141460010"><button type="button"
                                             class="btn btn-success "><i class="fab fa-whatsapp"></i> Fale
                                             Conosco</button></a>
 
@@ -114,6 +131,39 @@
                                 <div class="carousel-item">
                                     <img src="images/slide4.jpeg" class="d-block w-100">
                                 </div>
+                                <div class="carousel-item">
+                                    <img src="images/nova_imagem1.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/nova_imagem2.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/nova_imagem3.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/nova_imagem4.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/nova_imagem5.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/nova_imagem6.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/nova_imagem7.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/nova_imagem8.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/nova_imagem9.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/nova_imagem10.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/nova_imagem11.jpeg" class="d-block w-100">
+                                </div>
 
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
@@ -138,7 +188,8 @@
 
                         <li>Limpeza e tratamento de pisos</li>
                         <li>Impermeabilização de estofados</li>
-                        <li>Limpeza e higienização de estofados, colchões, cadeiras, poltronas, tapetes e etc...</li>
+                        <li>Lavagem e higienização de estofados a seco, colchões, cadeiras, poltronas, tapetes e etc...
+                        </li>
                         <li>Limpeza e sanitização de ambientes em residencias, escritórios, empresas e muito mais.</li>
                     </ul>
                 </div>
@@ -180,6 +231,7 @@
                     <li>Loja Carolina Modas</li>
                     <li>Loja Espaço da Moda </li>
                     <li>IT Hotel Itabira</li>
+                    <li>Hotel JOB</li>
                 </ul>
 
             </div>
@@ -268,9 +320,27 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                
+
                 <div class="col-12 col-sm-4">
                     <iframe width="100%" height="200px" src="https://www.youtube.com/embed/sKpNW7MKAZ8" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+                <div class="col-12 col-sm-4">
+                    <iframe width="100%" height="200px" src="https://www.youtube.com/embed/lcGpIfzJewM" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+                <div class="col-12 col-sm-4">
+                    <iframe width="100%" height="200px" src="https://www.youtube.com/embed/wG7LxVME_As" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+                <div class="col-12 col-sm-4">
+                    <iframe width="100%" height="200px" src="https://www.youtube.com/embed/mR_4koc0lrg" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
