--- a/index.html
+++ b/index.html
@@ -182,15 +182,11 @@
                 <div class="col-12 col-sm-6">
                     <h1>Nossos serviços</h1>
                     <ul>
-                        <li>Limpeza pós obra</li>
-                        <li>Limpeza pré e pós mudança</li>
-                        <li>Limpeza de vidros e fachadas</li>
-
-                        <li>Limpeza e tratamento de pisos</li>
+                        <li>Lavagem e higienização a seco em estofados, colchões, cadeiras, poltronas, cortinas persianas, bancos automotivos, carpetes,tapetes etc</li>
                         <li>Impermeabilização de estofados</li>
-                        <li>Lavagem e higienização de estofados a seco, colchões, cadeiras, poltronas, tapetes e etc...
-                        </li>
-                        <li>Limpeza e sanitização de ambientes em residencias, escritórios, empresas e muito mais.</li>
+                        <li>Limpeza de vidros e fachadas</li>
+                        <li>Limpeza e tratamento de pisos</li>
+                        <li>Limpeza Pós obra e muito mais</li>
                     </ul>
                 </div>
             </div>
