--- a/index.html
+++ b/index.html
@@ -203,12 +203,11 @@
                     <a href="https://api.whatsapp.com/send?phone=5531987490822" target="_blank">
                         <h4><i class="fab fa-whatsapp"></i> 31 98749-0822 - Lucas</h4>
                     </a>
-                    <a href="https://api.whatsapp.com/send?phone=55319986921714" target="_blank">
-                        <h4><i class="fab fa-whatsapp"></i> 31 98692-1714 - Lucimar</h4>
+                    <a href="https://api.whatsapp.com/send?phone=5531987490822" target="_blank">
+                        <h4><i class="fas fa-phone-alt"></i>   <i class="fab fa-whatsapp"></i> 31 4146-0010 </h4>
                     </a>
-                    <h4><i class="fas fa-phone-alt"></i> 31 4146-0010</h4>
                     <a href="http://www.instagram.com/renovalimp1" target="_blank">
-                        <h4> <i class="fab fa-instagram"></i></i> renovalimp1</h4>
+                        <h4><i class="fab fa-instagram"></i>  renovalimp1</h4>
                     </a>
                     <h4><i class="far fa-envelope"></i> renovalimp10@yahoo.com</h4>
 
@@ -228,6 +227,7 @@
                     <li>Loja Espaço da Moda </li>
                     <li>IT Hotel Itabira</li>
                     <li>Hotel JOB</li>
+                    <li>Supermercado Almeida</li>
                 </ul>
 
             </div>
