--- a/index.html
+++ b/index.html
@@ -237,10 +237,7 @@
 
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="images/clientes1.jpeg" class="d-block w-100">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/clientes2.jpeg" class="d-block w-100">
+                                <img src="images/cliente1.jpeg" class="d-block w-100">
                             </div>
                             <div class="carousel-item">
                                 <img src="images/clientes3.jpeg" class="d-block w-100">
