adiciona novas imagens

--- a/index.html
+++ b/index.html
@@ -164,6 +164,15 @@
                                 <div class="carousel-item">
                                     <img src="images/nova_imagem11.jpeg" class="d-block w-100">
                                 </div>
+                                <div class="carousel-item">
+                                    <img src="images/novas_1.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/novas_2.jpeg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/novas_3.jpeg" class="d-block w-100">
+                                </div>
 
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
@@ -334,6 +343,12 @@
 
                 <div class="col-12 col-sm-4">
                     <iframe width="100%" height="200px" src="https://www.youtube.com/embed/mR_4koc0lrg" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+                <div class="col-12 col-sm-4">
+                    <iframe width="100%" height="200px" src="https://www.youtube.com/embed/7b3LdeOhjLs" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
