--- a/index.html
+++ b/index.html
@@ -117,61 +117,28 @@
 
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="images/slide5.png" class="d-block w-100">
+                                    <img src="images/renova_1.jpeg" class="d-block w-100">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/slide1.jpeg" class="d-block w-100">
+                                <div>
+                                    <img src="images/renova_2.jpeg" class="d-block w-100">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/slide2.jpeg" class="d-block w-100">
+                                <div>
+                                    <img src="images/renova_3.jpeg" class="d-block w-100">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/slide3.jpeg" class="d-block w-100">
+                                <div>
+                                    <img src="images/renova_4.jpeg" class="d-block w-100">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/slide4.jpeg" class="d-block w-100">
+                                <div>
+                                    <img src="images/renova_5.jpeg" class="d-block w-100">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/nova_imagem1.jpeg" class="d-block w-100">
+                                <div>
+                                    <img src="images/renova_6.jpeg" class="d-block w-100">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/nova_imagem2.jpeg" class="d-block w-100">
+                                <div>
+                                    <img src="images/renova_7.jpeg" class="d-block w-100">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/nova_imagem3.jpeg" class="d-block w-100">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/nova_imagem4.jpeg" class="d-block w-100">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/nova_imagem5.jpeg" class="d-block w-100">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/nova_imagem6.jpeg" class="d-block w-100">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/nova_imagem7.jpeg" class="d-block w-100">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/nova_imagem8.jpeg" class="d-block w-100">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/nova_imagem9.jpeg" class="d-block w-100">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/nova_imagem10.jpeg" class="d-block w-100">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/nova_imagem11.jpeg" class="d-block w-100">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/novas_1.jpeg" class="d-block w-100">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/novas_2.jpeg" class="d-block w-100">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/novas_3.jpeg" class="d-block w-100">
+                                <div>
+                                    <img src="images/renova_8.jpeg" class="d-block w-100">
                                 </div>
 
                             </div>
@@ -191,11 +158,12 @@
                 <div class="col-12 col-sm-6">
                     <h1>Nossos serviços</h1>
                     <ul>
-                        <li>Lavagem e higienização a seco em estofados, colchões, cadeiras, poltronas, cortinas persianas, bancos automotivos, carpetes,tapetes etc</li>
+                        <li>Limpeza e higienização a seco em : Estofados, colchões, poltronas,cadeiras, bancos automotivos, carpetes e tapetes</li>>
                         <li>Impermeabilização de estofados</li>
-                        <li>Limpeza de vidros e fachadas</li>
-                        <li>Limpeza e tratamento de pisos</li>
-                        <li>Limpeza Pós obra e muito mais</li>
+                        <li>Limpeza especializada e tratamento de pisos</li>
+                        <li>Limpeza de fachadas</li>
+                        <li>Limpeza de percolatos</li>
+                        <li>distribuição de produtos de limpeza . Linha : *limpeza e conservação e tratamento de pisos. *cozinhas. *automotiva. *lavanderia</li>
                     </ul>
                 </div>
             </div>
