--- a/index.html
+++ b/index.html
@@ -119,25 +119,25 @@
                                 <div class="carousel-item active">
                                     <img src="images/renova_1.jpeg" class="d-block w-100">
                                 </div>
-                                <div>
+                                <div class="carousel-item">
                                     <img src="images/renova_2.jpeg" class="d-block w-100">
                                 </div>
-                                <div>
+                                <div class="carousel-item">
                                     <img src="images/renova_3.jpeg" class="d-block w-100">
                                 </div>
-                                <div>
+                                <div class="carousel-item">
                                     <img src="images/renova_4.jpeg" class="d-block w-100">
                                 </div>
-                                <div>
+                                <div class="carousel-item">
                                     <img src="images/renova_5.jpeg" class="d-block w-100">
                                 </div>
-                                <div>
+                                <div class="carousel-item">
                                     <img src="images/renova_6.jpeg" class="d-block w-100">
                                 </div>
-                                <div>
+                                <div class="carousel-item">
                                     <img src="images/renova_7.jpeg" class="d-block w-100">
                                 </div>
-                                <div>
+                                <div class="carousel-item">
                                     <img src="images/renova_8.jpeg" class="d-block w-100">
                                 </div>
 
@@ -158,12 +158,12 @@
                 <div class="col-12 col-sm-6">
                     <h1>Nossos serviços</h1>
                     <ul>
-                        <li>Limpeza e higienização a seco em : Estofados, colchões, poltronas,cadeiras, bancos automotivos, carpetes e tapetes</li>>
+                        <li>Limpeza e higienização a seco em : Estofados, colchões, poltronas,cadeiras, bancos automotivos, carpetes e tapetes</li>
                         <li>Impermeabilização de estofados</li>
                         <li>Limpeza especializada e tratamento de pisos</li>
                         <li>Limpeza de fachadas</li>
                         <li>Limpeza de percolatos</li>
-                        <li>distribuição de produtos de limpeza . Linha : *limpeza e conservação e tratamento de pisos. *cozinhas. *automotiva. *lavanderia</li>
+                        <li>Distribuição de produtos de limpeza . Linha : *limpeza e conservação e tratamento de pisos. *cozinhas. *automotiva. *lavanderia</li>
                     </ul>
                 </div>
             </div>
