--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
     })(window,document,'script','dataLayer','GTM-TBRH2BH');</script>
     <!-- End Google Tag Manager -->
       
-    
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TBRH2BH"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
 </head>
 
 <body>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TBRH2BH"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -
     <div class="container" id="titulo-mb">
         <div class="row">
             <div class="col-12">
